full project done

--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
           <div class="collapse navbar-collapse " id="mynav">
             <ul class="navbar-nav  mb-2 mb-lg-0">
               <li class="active">
-                <a href="#">Home</a>
+                <a href="./index.html">Home</a>
               </li>
               <li>
                 <a href="about.html">about us</a>
@@ -252,7 +252,7 @@
 
 <!-- bitcoin calculator part satrt -->
 
-<section id="bitcoin-calculator-section">
+<section id="bitcoin-calculator-section d-sm-block">
   <div class="container">
     <div class="row text-center calculator-content">
       <div class="text-center calculator-heading">
@@ -261,23 +261,23 @@
         </h2>
         <p>LEADING CRYPTOCURRENCY EXCHANGE SINCE DAY ONE OF BITCOIN DISTRIBUTION</p>
       </div>
-      <div class="col-xs-12 col-md-3 calculator-item">
+      <div class="col-12 col-sm-6 col-md-3 calculator-item">
         <h3>$77.45B</h3>
         <h4>marker cap</h4>
       </div>
-      <div class="col-xs-12 col-md-3 calculator-item">
+      <div class="col-12 col-sm-6 col-md-3 calculator-item">
         <h3>165K</h3>
         <h4>daily transactions</h4>
       </div>
-      <div class="col-xs-12 col-md-3 calculator-item">
+      <div class="col-12 col-sm-6 md-3 calculator-item">
         <h3>1726</h3>
         <h4>active account</h4>
       </div>
-      <div class="col-xs-12 col-md-3 calculator-item">
+      <div class="col-12 col-sm-6 col-md-3 calculator-item">
         <h3>17</h3>
         <h4>yearson the market</h4>
       </div>
-      <div class="col-xs-12 button-item">
+      <div class="col-12 button-item">
         <a class="btn btn-primary btn-pricing">SEE PRICING</a>
         <span class="or">or</span>
         <a class="btn btn-primary btn-regester">REGISTER NOW</a>
@@ -299,7 +299,7 @@
       </div>
     </div>
     <div class="row team-members">
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 team_box">
         <div class="team-member">
           <img src="./images/member1.jpg" alt="">
           <div class="team-member-caption">
@@ -319,7 +319,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 team_box">
         <div class="team-member">
           <img src="./images/member2.jpg" alt="">
           <div class="team-member-caption">
@@ -339,7 +339,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 team_box">
         <div class="team-member">
           <img src="./images/member3.jpg" alt="">
           <div class="team-member-caption">
