--- a/pricing.html
+++ b/pricing.html
@@ -203,7 +203,7 @@
     <h3 class="text-center">BUY BITCOINS</h3>
     <p class="text-center">Buy bitcoins with your credit card or cash here! Register to Bayya and get your bitcoins today.</p>
     <div class="row pricing_table">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-3 col-sm-12 pricing_box">
         <div class="pricing_table_item text-center">
           <div class="pricing_header">
             <h2>GET 0.007 BTC
@@ -220,7 +220,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-3 col-sm-12 pricing_box">
         <div class="pricing_table_item text-center">
           <div class="pricing_header">
             <h2>GET 0.015 BTC
@@ -237,7 +237,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-3 col-sm-12 pricing_box">
         <div class="pricing_table_item text-center">
           <div class="pricing_header">
             <h2>GET 0.031 BTC
@@ -254,7 +254,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-3 col-sm-12 pricing_box">
         <div class="pricing_table_item text-center">
           <div class="pricing_header">
             <h2>GET 0.081 BTC
@@ -275,7 +275,7 @@
     <h3 class="text-center">BUY BITCOINS</h3>
     <p class="text-center">Buy bitcoins with your credit card or cash here! Register to Bayya and get your bitcoins today.</p>
     <div class="row pricing_table">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-3 col-sm-12 pricing_box">
         <div class="pricing_table_item text-center">
           <div class="pricing_header">
             <h2>GET 100 USD
@@ -292,7 +292,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-3 col-sm-12 pricing_box">
         <div class="pricing_table_item text-center">
           <div class="pricing_header">
             <h2>GET 1000 USD
@@ -309,7 +309,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-3 col-sm-12 pricing_box">
         <div class="pricing_table_item text-center">
           <div class="pricing_header">
             <h2>GET 3000 USD
@@ -326,7 +326,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-3 col-sm-12 pricing_box">
         <div class="pricing_table_item text-center">
           <div class="pricing_header">
             <h2>GET 9000 USD
