--- a/index.html
+++ b/index.html
@@ -122,19 +122,19 @@
           <div class="collapse navbar-collapse " id="mynav">
             <ul class="navbar-nav  mb-2 mb-lg-0">
               <li class="active">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="about.html">about us</a>
               </li>
               <li>
-                <a href="./services.html">services</a>
+                <a href="../team_-A--main/services.html">services</a>
               </li>
               <li>
-                <a href="./pricing.html">pricing</a>
+                <a href="../team_-A--main/pricing.html">pricing</a>
               </li>
               <li  class="dropdown">
-                <a href="#">blog  <i class="fa fa-angle-down"></i></a>
+                <a href="../team_-A--main/right sidebar.html">blog  <i class="fa fa-angle-down"></i></a>
                 <ul class="my-drop">
                     <li><a href="#">Right Sidebar</a></li>
                     <li><a href="#">Left Sidebar</a></li>
@@ -143,7 +143,7 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="#">pages  <i class="fa fa-angle-down"></i></a>
+                <a href="../team_-A--main/terms of service.html">pages  <i class="fa fa-angle-down"></i></a>
                 <ul class="my-drop">
                     <li><a href="#">Register page</a></li>
                     <li><a href="#">Login page</a></li>
@@ -160,7 +160,7 @@
                 <a href="#">contact</a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-shopping-cart"></i></a>
+                <a href="../team_-A--main/shopingCart.html"><i class="fa fa-shopping-cart"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fa fa-search"></i></a>
@@ -356,7 +356,7 @@
 
 <!-- pricing part satrt -->
 
-<section id="pricing">
+<section id="pricing d-none d-sm-block">
   <div class="container">
     <div class="row text-center">
       <h2 class="title-head">AFFORDABLE <span>PACKAGES</span></h2>
